24 - hero background horizontal overflow issue fixed

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -39,6 +39,7 @@ body{
     font-size: $font-med;
     line-height: 1.3;
     min-height: 300vh;
+    overflow-x: hidden;
 
     &.noscroll{
         overflow: hidden;
