--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -52,6 +52,7 @@ body {
   font-size: 1.125rem;
   line-height: 1.3;
   min-height: 300vh;
+  overflow-x: hidden;
 }
 
 body.noscroll {
